@@ -21,6 +21,7 @@ Changelog for 1.3.6 [WIP]
 -Added an ability to customize UI/common assets from the episode and level sides (@Wohlstand)
 -Added a blink effect at speedrun timer on level/episode completion (@Wohlstand)
 -Added support for different display resolutions (@ds-sloth)
+-Fix vanilla peculiarity in which an event resetting section boundaries does not trigger the same checks and animations as an event setting section boundaries. (@ds-sloth)
 
 Changes for 1.3.5.3-1
 -Fixed autostart events behaviour
